--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Sorting Visualizer</title>
 
     <!-- linking style.css -->
-    <link href="style.css" rel="stylesheet" />
+    <link href="/style.css" rel="stylesheet" />
   </head>
 
   <!-- body -->
@@ -31,6 +31,6 @@
   </body>
 
   <!-- linking index.js -->
-  <script src="index.js"></script>
+  <script src="/Selection.js"></script>
 </html>
 
